# t3d

./: README.md  bp2vtk.py  bp2vtk_works.py
t3d/: CODE_OF_CONDUCT.md  LICENSE  README.md  bitbucket-pipelines.yml  environment.yml  pyproject.toml
t3d/ci/: autopep8-commit.sh
t3d/docs/: Developer.rst  FluxModels.rst  Inputs.rst  Install.rst  QuickGX.rst  QuickPlotting.rst  QuickReLU.rst  Quickstart.rst  Reference.rst  conf.py  index.rst
t3d/t3d/: FluxModels.py  Geometry.py  Grid.py  Import.py  Logbook.py  Physics.py  Profiles.py  Solver.py  SourceModels.py  Species.py  Time.py  TrinityIO.py  __main__.py  trinity_lib.py
t3d/t3d/Fusion_cross_sections/: T_3He_-_D_4He.txt
t3d/t3d/flux_models/: ChangHintonNeoclassical.py  Diffusive.py  GX.py  KNOSOS.py  PowerBalance.py  ReLU.py  SFINCS.py
t3d/t3d/geometry_models/: DESC.py  VMEC.py
t3d/t3d/source_models/: BEAMS3D.py
t3d/t3d/tools/: 3column-plot.py  plot-GX-vmec.py  plot-GX-vmec.py.ORIG  plot-GX-vmecSIMP.py  profile_plot.py  time_plot.py
t3d/tests/data/: data3.txt  desc_QH.h5  profiles.txt
t3d/tests/knosos/: input.model  input.surfaces
t3d/tests/regression/: gx_etg_template.in  gx_template.in  sfincs_template.namelist  test-desc-qh-relu.in  test-jet-relu-explicit.in  test-jet-relu.in  test-rescale-relu.in  test-w7x-gx-itg-etg.in  test-w7x-gx.in  test-w7x-relu-desc-evolve.in  test-w7x-relu-eDTC.in  test-w7x-relu-ke.in  test-w7x-relu.in  test-w7x-sfincs-gx.in
t3d/tests/unit/: test-beams3d-model.in  test-geometry-basic.in  test-geometry-miller.in  test-geometry-vmec.in  test-gx-model.in  test-import-ascii-power.in  test-import-ascii.in  test-import-ufile.in  test-knosos-model.in  test-relu-model.in  test-species-2.in  test-species-with-impurity.in  test-species.in  (+10 more)
